Actualización: Módulo de reshape, y corrección de información.

--- a/Laboratorio_LSTM_GRU_Inflacion.ipynb
+++ b/Laboratorio_LSTM_GRU_Inflacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlG5Pse4xJVnEzZhYhvXHf"
+      "authorship_tag": "ABX9TyMcWgSENqLdCTkiZZePA5oC"
     },
     "kernelspec": {
       "name": "python3",
@@ -359,7 +359,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "El conjunto de datos contiene el historial de inflación desde 1951. En primer lugar, recortaremos la información a partir de 1995, ya que los patrones observados en los registros más antiguos difieren de los de las últimas tres décadas. Posteriormente, prepararemos las columnas para estandarizar los tipos de datos."
+        "El conjunto de datos contiene el historial de inflación desde 1955. En primer lugar, recortaremos la información a partir de 1995, ya que los patrones observados en los registros más antiguos difieren de los de las últimas tres décadas. Posteriormente, prepararemos las columnas para estandarizar los tipos de datos."
       ],
       "metadata": {
         "id": "oatMIRJ9tA1C"
@@ -851,10 +851,143 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Forma de los datos\n",
+        "\n",
+        "*Pista: puede ser útil revisar la función ```reshape()``` en [NumPy](https://numpy.org/doc/stable/reference/generated/numpy.reshape.html)*\n"
+      ],
+      "metadata": {
+        "id": "T-4bOW63jN4L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reshape_data(X, Y):\n",
+        "    \"\"\"\n",
+        "    Transforma datos al formato requerido para la LSTM y la red GRU.\n",
+        "\n",
+        "    LSTM espera:\n",
+        "    - X: shape (n_x, m, T_x) donde:\n",
+        "        n_x = número de features\n",
+        "        m = batch size (número de muestras)\n",
+        "        T_x = longitud de secuencia temporal\n",
+        "    - Y: shape (n_y, m, 1) donde:\n",
+        "        n_y = número de salidas\n",
+        "        m = batch size\n",
+        "\n",
+        "    Argumentos:\n",
+        "    X -- array shape (m, T_x)\n",
+        "    Y -- array shape (m, n_steps_out)\n",
+        "\n",
+        "    Retorna:\n",
+        "    X_reshaped -- array shape (n_x, m, T_x)\n",
+        "    Y_reshaped -- array shape (n_y, m, 1)\n",
+        "    \"\"\"\n",
+        "    ### START CODE HERE ###\n",
+        "    X_reshaped = X.reshape(1, X.shape[0], X.shape[1]) # X: de (m, T_x) a (1, m, T_x)\n",
+        "    Y_reshaped = Y.T.reshape(Y.shape[1], -1, 1)     # Y: de (m, n_steps_out) a (n_steps_out, m, 1)\n",
+        "    ### END CODE HERE ###\n",
+        "\n",
+        "    return X_reshaped, Y_reshaped"
+      ],
+      "metadata": {
+        "id": "kNT3tDYd1S2P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "149f8684",
+        "outputId": "5b859e1d-398f-4235-e694-80dbccb81a07"
+      },
+      "source": [
+        "# Tester de la funcion reshape_for_lstm\n",
+        "# Fijamos una semilla para los test para reproducibilidad\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "# Definimos diferentes tamaños de ventana y pasos de salida para probar\n",
+        "test_params = [\n",
+        "    (10, 3),  # T_x=10, n_steps_out=3\n",
+        "    (5, 1),   # T_x=5, n_steps_out=1\n",
+        "    (15, 5)   # T_x=15, n_steps_out=5\n",
+        "]\n",
+        "\n",
+        "for n_steps_in, n_steps_out in test_params:\n",
+        "    # Generamos datos de ejemplo con un número arbitrario de muestras (m)\n",
+        "    m = 25 # Número de muestras\n",
+        "    X_original = np.random.rand(m, n_steps_in)\n",
+        "    Y_original = np.random.rand(m, n_steps_out)\n",
+        "\n",
+        "    # Aplicamos la función de reshape\n",
+        "    X_reshaped, Y_reshaped = reshape_data(X_original, Y_original)\n",
+        "\n",
+        "    # Imprimimos las formas originales y transformadas para el primer caso\n",
+        "    if n_steps_in == 10:\n",
+        "        print(f\"Probando con n_steps_in={n_steps_in}, n_steps_out={n_steps_out}, m={m}\")\n",
+        "        print(\"Shape inicial de X:\", X_original.shape)\n",
+        "        print(\"Reshape de X:\", X_reshaped.shape)\n",
+        "        print(\"Shape inicial de Y:\", Y_original.shape)\n",
+        "        print(\"Reshape de Y:\", Y_reshaped.shape)\n",
+        "        print(\"-\" * 20)\n",
+        "\n",
+        "\n",
+        "    # Verificamos las formas transformadas\n",
+        "    expected_X_shape = (1, m, n_steps_in)\n",
+        "    expected_Y_shape = (n_steps_out, m, 1)\n",
+        "\n",
+        "    assert X_reshaped.shape == expected_X_shape, f\"Expected X shape {expected_X_shape}, but got {X_reshaped.shape}\"\n",
+        "    assert Y_reshaped.shape == expected_Y_shape, f\"Expected Y shape {expected_Y_shape}, but got {Y_reshaped.shape}\"\n",
+        "\n",
+        "    # Verificamos el contenido (comparando elementos seleccionados)\n",
+        "    # X_reshaped[0, :, i] debería ser igual a X_original[:, i]\n",
+        "    for i in range(n_steps_in):\n",
+        "        assert np.array_equal(X_reshaped[0, :, i], X_original[:, i]), f\"Content mismatch in X at step {i}\"\n",
+        "\n",
+        "    # Y_reshaped[i, :, 0] debería ser igual a Y_original[:, i]\n",
+        "    for i in range(n_steps_out):\n",
+        "        assert np.array_equal(Y_reshaped[i, :, 0], Y_original[:, i]), f\"Content mismatch in Y at step {i}\"\n",
+        "\n",
+        "\n",
+        "print('\\033[92mTest Aprobado\\033[0m')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Probando con n_steps_in=10, n_steps_out=3, m=25\n",
+            "Shape inicial de X: (25, 10)\n",
+            "Reshape de X: (1, 25, 10)\n",
+            "Shape inicial de Y: (25, 3)\n",
+            "Reshape de Y: (3, 25, 1)\n",
+            "--------------------\n",
+            "\u001b[92mTest Aprobado\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "kNT3tDYd1S2P"
+        "id": "t4AdTiwLsQc9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hqjE9sxNvAFu"
       },
       "execution_count": null,
       "outputs": []
