--- a/Laboratorio_LSTM_GRU_Inflacion.ipynb
+++ b/Laboratorio_LSTM_GRU_Inflacion.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNRrKdf1JxTF6EfmoGVI0gA",
+      "authorship_tag": "ABX9TyOEXQbG3d9BoJudYNkadm4k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4066,39 +4066,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "13f2baaf"
-      },
-      "source": [
-        "# Task\n",
-        "I will now update the code to make all models predict the next 24 months. First, I will update the implemented LSTM model."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "23d907ca"
-      },
-      "source": [
-        "## Actualizar predicciones LSTM (implementada)\n",
-        "\n",
-        "### Subtask:\n",
-        "Modificar la celda de código correspondiente para que el modelo LSTM implementado prediga los próximos 24 meses de inflación en lugar de 12.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "91b58a2b"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The user wants to update the LSTM prediction cell to forecast for 24 months instead of 12. I need to modify the loop range and the print statement in the specified code cell to reflect this change.\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -4148,17 +4115,6 @@
             " 0.07725563 0.07676442 0.0747757  0.07150379 0.06747195 0.06329657]\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9ae4e386"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The previous step updated the LSTM model to predict for 24 months. Now, I need to update the plotting code to correctly visualize these 24 months of predictions. This involves adjusting the `future_dates` to cover 24 months and updating the plot's label.\n",
-        "\n"
       ]
     },
     {
@@ -4223,29 +4179,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3e5daa87"
-      },
-      "source": [
-        "## Actualizar predicciones LSTM (Keras)\n",
-        "\n",
-        "### Subtask:\n",
-        "Modificar la celda de código correspondiente para que el modelo LSTM de Keras prediga los próximos 24 meses de inflación en lugar de 12.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "455f4322"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The subtask requires modifying the prediction loop and print statement for the Keras LSTM model to generate 24 months of predictions. I will update the code in cell `y5ekZ5XR4vmC` accordingly.\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -4295,17 +4228,6 @@
             " 0.07116156 0.07075708 0.06987295 0.06857444 0.06697762 0.06522827]\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "a8da62a8"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The previous step updated the Keras LSTM model to predict for 24 months. Now, I need to update the plotting code to correctly visualize these 24 months of predictions. This involves adjusting the `future_dates` to cover 24 months and updating the plot's label.\n",
-        "\n"
       ]
     },
     {
@@ -4370,29 +4292,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "836136f2"
-      },
-      "source": [
-        "## Actualizar predicciones GRU\n",
-        "\n",
-        "### Subtask:\n",
-        "Modificar la celda de código correspondiente para que el modelo GRU implementado prediga los próximos 24 meses de inflación en lugar de 12."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d2a6d336"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The subtask requires modifying the prediction loop and print statement for the implemented GRU model to generate 24 months of predictions. I will update the code in cell `9-ElgwyQdcuW` accordingly.\n",
-        "\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -4440,17 +4339,6 @@
             " 0.07517696 0.07499344 0.07374535 0.0714513  0.06832865 0.06477128]\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "6c6912c7"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The previous step updated the implemented GRU model to predict for 24 months. Now, I need to update the plotting code to correctly visualize these 24 months of predictions. This involves adjusting the `future_dates` to cover 24 months and updating the plot's label.\n",
-        "\n"
       ]
     },
     {
@@ -4520,21 +4408,7 @@
         "id": "0eb74bb2"
       },
       "source": [
-        "## Actualizar predicciones GRU (Keras)\n",
-        "\n",
-        "### Subtask:\n",
-        "Modificar la celda de código correspondiente para que el modelo GRU de Keras prediga los próximos 24 meses de inflación en lugar de 12.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9c624539"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The subtask requires modifying the prediction loop and print statement for the Keras GRU model to generate 24 months of predictions. I will update the code in cell `gI3tYRwmiZlU` accordingly.\n",
-        "\n"
+        "## Actualizar predicciones GRU (Keras)"
       ]
     },
     {
@@ -4587,17 +4461,6 @@
             " 0.06700864 0.06644282 0.06560936 0.064569   0.06339496 0.06216273]\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "a01133f1"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The previous step updated the Keras GRU model to predict for 24 months. Now, I need to update the plotting code to correctly visualize these 24 months of predictions. This involves adjusting the `future_dates` to cover 24 months and updating the plot's label.\n",
-        "\n"
       ]
     },
     {
@@ -4659,27 +4522,6 @@
           },
           "metadata": {}
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c500ae8f"
-      },
-      "source": [
-        "## Ideas para visualizar la varianza de las predicciones\n",
-        "\n",
-        "Para visualizar la incertidumbre o varianza de las predicciones para los 24 meses futuros, aquí tienes algunas ideas:\n",
-        "\n",
-        "1.  **Intervalos de Predicción (Prediction Intervals)**: En lugar de una sola línea de predicción, puedes calcular un rango (por ejemplo, 95% de confianza) alrededor de cada predicción. Esto se puede lograr con técnicas como el *bootstrap* (re-muestreo de los residuos del modelo y re-predicción) o utilizando modelos que intrínsecamente proporcionan estimaciones de incertidumbre (ej. redes bayesianas o métodos de Monte Carlo Dropout en redes neuronales).\n",
-        "\n",
-        "2.  **Múltiples Simulaciones / Caminos Futuros**: Si tienes un modelo que puede generar múltiples predicciones estocásticas para el futuro (por ejemplo, con muestreo de Monte Carlo), puedes graficar varias de estas trayectorias. Esto daría una idea visual de la dispersión de los resultados posibles.\n",
-        "\n",
-        "3.  **Gráficos de Fan (Fan Charts)**: Estos gráficos muestran áreas sombreadas que representan diferentes niveles de confianza (ej. 50%, 70%, 90% de los intervalos de predicción). El sombreado se vuelve más ancho a medida que la predicción se adentra más en el futuro, reflejando el aumento de la incertidumbre.\n",
-        "\n",
-        "4.  **Error Estándar de la Predicción**: Si tu modelo puede estimar el error estándar de cada predicción, puedes usarlo para dibujar bandas de error alrededor de la línea de predicción media.\n",
-        "\n",
-        "5.  **Análisis de Residuos en el Conjunto de Prueba**: Aunque no es una visualización de la varianza futura directa, entender la distribución de los errores en los datos de prueba (`y_test_actual` vs. `y_pred_test_model`) puede dar una indicación del nivel de incertidumbre que el modelo ya tiene en datos conocidos."
       ]
     },
     {
